--- a/assest/css/general.css
+++ b/assest/css/general.css
@@ -1,4 +1,4 @@
-.background-puryfiel{
+.background-gym{
     background-color: #ececf4;
 }
 .seccion-b{
@@ -8,7 +8,7 @@
     background-color: white;
 }
 
-.link-puryfiel:hover{
+.link-gym:hover{
     border-bottom: #4c6ca4;
     border-style: solid;
     border-width: 0px 0px 1px 0px;
@@ -30,7 +30,7 @@
 }
 
 
-.color-puryfiel{
+.color-gym{
     color: #4c6ca4;
 }
 @media only screen and (min-width:840px) {
