--- a/assest/css/general.css
+++ b/assest/css/general.css
@@ -62,4 +62,15 @@
         display:flex;
     }
 }
+@media only screen and (min-width:1200px) {
+    .carousel-inner img {
+        filter: brightness(70%);
+        object-fit: cover;
+        height: 50vh;
+    }
+    .img-seccion{
+        width:100%;
+        max-height: 30vh;
+    }
 
+}
