cambio de colores y logo

--- a/assest/css/general.css
+++ b/assest/css/general.css
@@ -1,76 +1,4 @@
-.background-gym{
-    background-color: #ececf4;
-}
-.seccion-b{
-    background-color: #4c6ca4;
-}
-.seccion-w{
-    background-color: white;
-}
-.img-seccion{
-    min-height: 15vh;
+.ck-negro{
+    background: #11111f;
 }
 
-.link-gym:hover{
-    border-bottom: #4c6ca4;
-    border-style: solid;
-    border-width: 0px 0px 1px 0px;
-}
-.seccion{
-    min-height: 15vh;
-}
-.red-social{
-    font-size: 250%;
-    margin: 20px;
-}
-.img-cover{
-    object-fit: cover;
-}
-.carousel-inner img {
-    filter: brightness(70%);
-    object-fit: cover;
-    height: 25vh;
-}
-.carousel-layer{
-    height: 25vh;
-}
-
-.color-gym{
-    color: #4c6ca4;
-}
-@media only screen and (min-width:840px) {
-    #Seccion1{
-        display:none;
-    }
-}
-@media only screen and (min-width:992px) {
-    .carousel-inner img {
-        filter: brightness(70%);
-        object-fit: cover;
-        height: 60vh;
-    }
-    .carousel-layer{
-        height: 60vh;
-    }
-    .seccion{
-        min-height: 25vh;
-    }
-    .img-seccion{
-        min-height: 25vh;
-    }
-    #Seccion1{
-        display:flex;
-    }
-}
-@media only screen and (min-width:1200px) {
-    .carousel-inner img {
-        filter: brightness(70%);
-        object-fit: cover;
-        height: 50vh;
-    }
-    .img-seccion{
-        width:100%;
-        max-height: 30vh;
-    }
-
-}
